--- a/sem-1/WT/Lab-5/Layout-1/index.html
+++ b/sem-1/WT/Lab-5/Layout-1/index.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Form</title>
+    <title>Form-1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-
         <div class="navbar">
             <div class="logo">
-                <h1 class="logohere">
-                    Logo Here
-                </h1>
-            </div>
-
-            <div class="links">
-                <a href="#">Home</a>
+                <h1>Logo Here</h1>
             </div>
             <div class="links">
-                <a href="#">About</a>
+                <a href="#" class="childLink">Home</a>
+                <a href="#" class="childLink">About</a>
+                <a href="#" class="childLink">Contact</a>
             </div>
-            <div class="links">
-                <a href="#">Contact</a>
-            </div>
-
         </div>
 
         <div class="main">
             <div class="sidebar">
-                <div class="sidebox">
-                    <h2>RESULT</h2>
+                <div class="box">
+                    <h1>Result</h1>
                 </div>
-                <div class="sidebox">
-                    <h2>APPLY</h2>
+                <div class="box">
+                    <h1>Apply</h1>
                 </div>
-                <div class="sidebox">
-                    <h2>PLACEMENT</h2>
+                <div class="box">
+                    <h1>Placement</h1>
                 </div>
-                <div class="sidebox">
-                    <h2>RECRUTMENT</h2>
-                </div><div class="sidebox">
-                    <h2>NEWS</h2>
+                <div class="box">
+                    <h1>Recrutment</h1>
+                </div>
+                <div class="box">
+                    <h1>News</h1>
                 </div>
             </div>
 
-            <div class="maincontent">
-                
+            <div class="content">
+                <div class="contentBox">
+                    <div class="grop">
+                        <div class="gropChild">
+                        </div>
+                        <div class="gropChild">
+                        </div>
+                    </div>
+                    <div class="grop">
+                        <div class="gropChild2">
+                        </div>
+                        <div class="gropChild2">
+                        </div>
+                        <div class="gropChild2">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="footer">
+            <h1>Footer</h1>
+        </div>
+
     </div>
 </body>
 </html>
