--- a/sem-1/WT/Lab-5/Layout-4/index.html
+++ b/sem-1/WT/Lab-5/Layout-4/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="c.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="HeadFoot">
+    <div class="container">
     </div>
     <div class="box">
         <div class="header">
@@ -17,14 +17,14 @@
         <div class="sidebar">
         </div>
         <div class="main">
-            <div class="rightbar">
+            <div class="rightside   ">
             </div>
         </div>
         
         <div class="footer">
         </div>
     </div>
-    <div class="HeadFoot">
+    <div class="container">
     </div>
     
 </body>
