--- a/sem-1/WT/Project/index.html
+++ b/sem-1/WT/Project/index.html
@@ -5,63 +5,187 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cyborg</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <div>
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg mt-3">
-                        <div class="container-fluid">
-                            <a class="navbar-brand text-light" href="index.html"><img src="./images/logo.png" alt=""></a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse justify-content-centar ms-5">
-                                <form class="d-flex" role="search">
-                                    <input class="form-control me-2 page-content" type="search" placeholder="Search" aria-label="Search">
-                                </form>
-                            </div>
-                            <div class="collapse navbar-collapse justify-content-end">
-                                <div class="navbar-nav">
-                                    <a class="nav-link me-4" href="#">Home</a>
-                                    <a class="nav-link me-4" href="#">Browse</a>
-                                    <a class="nav-link me-4" href="#">Details</a>
-                                    <a class="nav-link me-4" href="#">Streams</a>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg mt-3">
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="index.html"><img src="./images/logo.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-centar ms-5">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2 page-content" type="search" placeholder="Search" aria-label="Search">
+            </form>
+          </div>
+          <div class="collapse navbar-collapse justify-content-end">
+            <div class="navbar-nav">
+              <a class="nav-link me-4" href="#">Home</a>
+              <a class="nav-link me-4" href="#">Browse</a>
+              <a class="nav-link me-4" href="#">Details</a>
+              <a class="nav-link me-4" href="#">Streams</a>
             </div>
+          </div>
+        </div>
+      </nav>
+
+      <div class="page-content p-lg-5 mt-3">
+        <div class="main-banner position-relative">
+          <img src="./images/banner-bg.jpg" alt="" class="img-fluid banner-image" />
+          <div class="banner-text d-flex flex-column justify-content-center align-items-start position-absolute top-50 start-0 ms-lg-5 ps-3" style="transform: translateY(-50%);">
+            <h4>Welcome To Cyborg</h4>
+            <h1>
+              <span style="color: #e75e8d; font-weight: 500; font-size: larger;">Browse</span>
+              Our Popular <br />
+              Games Here
+            </h1>
+            <a href="browse.html" class="main-button mt-3">Browse Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="most-popular">
+        <div class="heading-section mt-4 ms-3">
+          <h4><em>Most Popular</em> Right Now</h4>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="page-content">
-                        <div class="main-banner position-relative">
-                            <div class="row">
-                                <div class="col-lg-11 m-5">
-                                    <img src="./images/banner-bg.jpg" alt="" class="img-fluid banner-image">
-                                    <div class="banner-text">
-                                        <h6 class="ms-5">Welcome To Cyborg</h6>
-                                        <h4 class="ms-5"><span style="color: #e75e8d;">Browse</span> Our Popular <br>Games Here</h4>
-                                        <a href="browse.html" class="main-button ms-5">Browse Now</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="row p-3">
+
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
             </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
 
+        <div class="row p-3">
+
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center">
+              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <div class="card-body">
+                <h4 class="card-title">Fortnite</h4>
+                <h5 class="card-subtitle mb-2">Sandbox</h5>
+                <ul class="d-flex justify-content-center list-inline mb-0">
+                  <li class="list-inline-item"><i class="bi bi-star-fill"></i> 4.8</li>
+                  <li class="list-inline-item"><i class="bi bi-download"></i> 2.3M</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="page-content p-lg-5 mt-3">
+        <div class="main-banner position-relative">
+          <img src="./images/banner-bg.jpg" alt="" class="img-fluid banner-image" />
+          <div class="banner-text d-flex flex-column justify-content-center align-items-start position-absolute top-50 start-0 ms-lg-5 ps-3" style="transform: translateY(-50%);">
+            <h4>Welcome To Cyborg</h4>
+            <h1>
+              <span style="color: #e75e8d; font-weight: 500; font-size: larger;">Browse</span>
+              Our Popular <br />
+              Games Here
+            </h1>
+            <a href="browse.html" class="main-button mt-3">Browse Now</a>
+          </div>
+        </div>
+      </div>
+
+      
     </div>
-    <link rel="stylesheet" href="./bootstrap/js/bootstrap.min.js" />
+
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
