--- a/sem-1/WT/Project/index.html
+++ b/sem-1/WT/Project/index.html
@@ -12,7 +12,6 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg mt-3">
         <div class="container-fluid">
-          <!-- <a class="navbar-brand text-light" href="index.html"><img src="./images/logo.png" alt=""></a> -->
            <div class="logo">Cyborg</div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +24,10 @@
           </div>
           <div class="collapse navbar-collapse justify-content-end">
             <div class="navbar-nav">
-              <a class="nav-link me-4" href="#">Home</a>
-              <a class="nav-link me-4" href="#">Browse</a>
-              <a class="nav-link me-4" href="#">Details</a>
-              <a class="nav-link me-4" href="#">Streams</a>
+              <a class="nav-link me-4" href="./index.html">Home</a>
+              <a class="nav-link me-4" href="./browse.html">Browse</a>
+              <a class="nav-link me-4" href="./detail.html">Details</a>
+              <a class="nav-link me-4" href="./stream.html">Streams</a>
             </div>
           </div>
         </div>
@@ -176,7 +175,6 @@
         <div class="page-content p-lg-5 mt-4">
         <div class="page-black-content p-lg-5 mt-2">
           <div class="game-list">
-            <!-- Game 1 -->
             <div class="game-item d-flex align-items-center p-3 mb-3">
               <img src="./images/game-01.jpg" class="game-img rounded me-3">
               <div class="flex-grow-1">
@@ -198,7 +196,6 @@
               <button class="btn btn-downloaded ms-3">Downloaded</button>
             </div>
             
-            <!-- Game 2 -->
             <div class="game-item d-flex align-items-center p-3 mb-3">
                 <img src="./images/game-01.jpg" class="game-img rounded me-3">
                 <div class="flex-grow-1">
@@ -220,7 +217,6 @@
                 <button class="btn btn-download ms-4">Download</button>
             </div>
             
-            <!-- Game 3 -->
             <div class="game-item d-flex align-items-center p-3 mb-3">
                 <img src="./images/game-01.jpg" class="game-img rounded me-3">
                 <div class="flex-grow-1">
