--- a/sem-1/WT/Project/index.html
+++ b/sem-1/WT/Project/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-expand-md mt-3">
         <div class="container-fluid">
            <div class="logo">Cyborg</div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -33,10 +33,10 @@
         </div>
       </nav>
 
-      <div class="page-content p-lg-5 mt-3">
+      <div class="page-content p-md-5 mt-3">
         <div class="main-banner position-relative">
           <img src="./images/banner-bg.jpg" alt="" class="img-fluid banner-image" />
-          <div class="banner-text d-flex flex-column justify-content-center align-items-start position-absolute top-50 start-0 ms-lg-5 ps-3" style="transform: translateY(-50%);">
+          <div class="banner-text d-flex flex-column justify-content-center align-items-start position-absolute top-50 start-0 ms-md-5 ps-3" style="transform: translateY(-50%);">
             <h4>Welcome To Cyborg</h4>
             <h1>
               <span style="color: #e75e8d; font-weight: 500; font-size: larger;">Browse</span>
@@ -57,7 +57,7 @@
 
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -70,7 +70,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -96,7 +96,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -114,7 +114,7 @@
 
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -127,7 +127,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -140,7 +140,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -153,7 +153,7 @@
           </div>
           <div class="col-md-3">
             <div class="card text-center">
-              <img src="./images/popular-01.jpg" class="card-img-top p-lg-3">
+              <img src="./images/popular-01.jpg" class="card-img-top p-md-3">
               <div class="card-body">
                 <h4 class="card-title">Fortnite</h4>
                 <h5 class="card-subtitle mb-2">Sandbox</h5>
@@ -172,8 +172,8 @@
         <div class="heading-section ms-3">
           <h4><em>Your Gaming</em> Library</h4>
         </div>
-        <div class="page-content p-lg-5 mt-4">
-        <div class="page-black-content p-lg-5 mt-2">
+        <div class="page-content p-md-5 mt-4">
+        <div class="page-black-content p-md-5 mt-2">
           <div class="game-list">
             <div class="game-item d-flex align-items-center p-3 mb-3">
               <img src="./images/game-01.jpg" class="game-img rounded me-3">
@@ -246,7 +246,7 @@
       <footer>
         <div class="container text-center mt-4 mb-3">
           <div class="row">
-            <div class="col-lg-12 text-light">
+            <div class="col-md-12 text-light">
               <p>Copyright © 2025 Cyborg Gaming. All rights reserved. 
             </div>
           </div>
