wt project template done

--- a/sem-1/WT/Project/index.html
+++ b/sem-1/WT/Project/index.html
@@ -214,7 +214,7 @@
                     <p class="me-5 mb-0"><strong class="game-header">Currently</strong></p>
                     <p>Downloaded</p>
                 </div>
-                <button class="btn btn-download ms-4">Download</button>
+                <button class="btn btn-download text-light   ms-4">Download</button>
             </div>
             
             <div class="game-item d-flex align-items-center p-3 mb-3">
