--- a/sem-1/WT/Lab-13/class.html
+++ b/sem-1/WT/Lab-13/class.html
@@ -15,7 +15,7 @@
             }
 
             function show() {
-                return `Details Name ${}`
+                return `Details Name`
             }
         }
 
